fix all page and filter product

--- a/public/scss/base/variables/_font.scss
+++ b/public/scss/base/variables/_font.scss
@@ -3,9 +3,10 @@
 //
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;700&display=swap');
 
 // Font family
-$roboto-family: 'Roboto', sans-serif;
+$roboto-family: 'Be Vietnam Pro', sans-serif;
 
 $roboto-bold: 700;
 $roboto-bolder: 900;
