--- a/public/scss/layouts/_footer.scss
+++ b/public/scss/layouts/_footer.scss
@@ -1,6 +1,6 @@
 .coco-footer-wrap {
     background: #000000;
-    display: none;
+    display: block;
 
     @media (min-width: 991px) {
         display: block;
@@ -16,10 +16,10 @@
     }
 
     .flud-container {
-        max-width: 1320px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
+        // max-width: 1320px;
+        // margin: 0 auto;
+        // display: flex;
+        // flex-direction: column;
         padding-top: $padding-40;
         padding-bottom: $padding-14;
 
@@ -29,9 +29,11 @@
         }
 
         .footer-row {
-            display: flex;
-            align-items: flex-start;
-            justify-content: space-between;
+            @media (min-width: 991px) {
+                display: flex;
+                align-items: flex-start;
+                justify-content: space-between;
+            }        
 
             @media (max-width: 1100px) {
                 flex-wrap: wrap;
@@ -42,7 +44,7 @@
                 padding-bottom: $padding-25;
                 border-bottom: 1px solid c-base-color(light, 1);
                 @media (max-width: 1100px) {
-                    width: 68%;
+                    // width: 68%;
                     border-bottom: 0 !important;
                     padding-bottom: 0 !important;
                 }
@@ -53,6 +55,11 @@
                 @media (max-width: 1100px) {
                     width: 32%;
                     padding-top: 0 !important;
+                }
+                @media (max-width: 991px){
+                    width: 100%;
+                    padding: 15px !important;
+                    display: table-cell;
                 }
             }
 
@@ -78,6 +85,9 @@
                     &:nth-last-child(1) {
                         margin-bottom: 0;
                     }
+                }
+                @media (max-width: 991px) {
+                    margin-bottom: 20px;
                 }
             }
 
@@ -145,6 +155,9 @@
                         color: c-base-color(light, 1);
                     }
                 }
+                .dmca-cocolux{
+                    margin-top: 15px;
+                }
             }
 
             .coco-lisence {
@@ -163,6 +176,9 @@
                         max-width: 75%;
                         overflow: hidden;
                     }
+                    @media (max-width: 991px){
+                        display: none;
+                    }
                 }
 
                 .license-page {
@@ -175,6 +191,11 @@
                         margin-top: 10px;
                         margin-left: 10px;
                         align-items: flex-start;
+                    }
+
+                    @media (max-width: 991px) {
+                        width: 100%;
+                        margin: 10px 0px;
                     }
 
                     .link-app {
@@ -310,6 +331,9 @@
             }
 
             .register-box {
+                @media (max-width: 991px) {
+                    color: #000000;
+                }
                 .box {
                     &:not(:first-child) {
                         margin-top: 10px;
@@ -342,7 +366,6 @@
                             line-height: 19px;
                             outline: none;
                             border-color: transparent;
-                            -webkit-appearance: none;
                             transition: all ease 0.3s;
                             background: c-base-color(light, 1);
                         }
@@ -352,6 +375,16 @@
                             font-size: $caption-font-size;
                             white-space: nowrap;
                             border-radius: 0 35px 35px 0;
+                        }
+                        @media (max-width: 991px) {
+                            border: none;
+                            box-shadow: none;
+                            background: #000000;
+                            input{
+                                background-color: #000;
+                                border: none;
+                                box-shadow: none;
+                            }
                         }
                     }
                 }
