--- a/public/scss/pages/_page.product-detail.scss
+++ b/public/scss/pages/_page.product-detail.scss
@@ -2783,6 +2783,14 @@
         }
     }
 
+    .background-pupop{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+    }
+
     .modal-preview-image {
         @media (min-width: 768px) {
             width: 800px;
