--- a/public/scss/layouts/_footer.scss
+++ b/public/scss/layouts/_footer.scss
@@ -105,19 +105,14 @@
                     }
 
                     img {
-                        width: 100%;
-                        filter: brightness(0) invert(1);
-
                         @media (max-width: 1100px) {
                             &:nth-last-child(1) {
                                 width: auto;
-                                height: 30px;
                             }
                         }
 
                         &:nth-child(1) {
-                            max-width: 36px;
-                            padding-right: $padding-10;
+                            margin-bottom: $padding-10;
                         }
                     }
                 }
