--- a/public/scss/pages/_page.article.scss
+++ b/public/scss/pages/_page.article.scss
@@ -284,6 +284,9 @@
             background: $card-bg;
             overflow: hidden;
             border-radius: $card-round;
+            h2, h3, h5, p{
+                margin-top: 20px;
+            }
             &>div{
                 padding: $padding-18 $padding-26;
             }
@@ -300,6 +303,7 @@
                 display: flex;
                 margin-bottom: 14px;
                 padding: 0;
+                justify-content: center;
 
                 .item-wrap {
                     .card {
@@ -417,7 +421,7 @@
 
                 &.item-sm {
                     .topbox-item-thumbnail {
-                        padding-bottom: 47%;
+                        
                     }
                     .topbox-item-title {
                         padding-top: $padding-5;
@@ -431,7 +435,6 @@
                     width: 100%;
                     position: relative;
                     height: auto;
-                    padding-bottom: 55%;
                 }
                 &-title {
                     padding-top: $padding-10;
@@ -481,7 +484,6 @@
                     width: 40%;
                     position: relative;
                     height: auto;
-                    padding-bottom: 20%;
                 }
                 &-content {
                     width: 60%;
@@ -545,7 +547,6 @@
                     position: relative;
                     height: auto;
                     margin-bottom: 8px;
-                    padding-bottom: 70%;
                 }
                 &-title,
                 &-content {
@@ -642,7 +643,6 @@
         }
     }
     .img-absolute {
-        position: absolute;
         width: 100%;
         height: 100%;
         max-width: 100%;
