--- a/public/scss/pages/_page.home.scss
+++ b/public/scss/pages/_page.home.scss
@@ -220,6 +220,9 @@
                 }
             }
         }
+        .account-d-none{
+            display: none;
+        }
     }
 
     img {
